# arxiv-notificator

./: README.md  arxiv_category_client.py  history.json  history_manager.py  huggingface_client.py  main.py  pyproject.toml  slack_client.py
.github/workflows/: daily.yml
.kiro/specs/arxiv-notificator-app/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/category-filter-history/: design.md  requirements.md  research.md  spec.json  tasks.md
src/: main.py  slack_client.py
tests/: test_arxiv_category_client.py  test_history_manager.py  test_huggingface_client.py  test_slack_client.py
